# greek-parliament-text-analysis

./: README.md  docker-compose.yaml  elastic_insert.py  greek_parliament_topics.html  pyproject.toml
embeddings/: embeddings_app.py  greek_embeddings.py  insert_meilisearch.py
preprocessing/: extract_speeches.py
topics_modeling/: describe_topics.py  tokenization.py  topic_modeling.py
